cleaned up and formatted the files, added instructions for the user for better usability.

--- a/Unit-06/index.html
+++ b/Unit-06/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>DRC Assignment 5</title>
+    <title>DRC Assignment 6</title>
     <link href="https://fonts.googleapis.com/css?family=Muli:400,600,700" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -12,26 +12,35 @@
     <div id="wrapper">
         <div id="header">
             <div class="transbox">
-                <h1 id="CompanyName">Unit 05</h1>
-                <h2 id="Slogan">The Arborist Project</h2>
+                <h1 id="CompanyName">Unit 06</h1>
+                <h2 id="Slogan">Nonsense Story</h2>
             </div>
         </div>
         <div id="content">
             <h1 id="greetingHeader"></h1>
-
-            <h2>Things I learned</h2>
-            <ul>
-                <li>
-                    How to work with Arrays
-                </li>
-            </ul>
+            <div class="learnedList">
+                <h2>Things I learned</h2>
+                <ul>
+                    <li>
+                        How to work with Arrays
+                    </li>
+                    <li>
+                        Regular expressions
+                    </li>
+                    <li>
+                        Javascript split
+                    </li>
+                </ul>
+            </div>
             <div class="gameContainer">
 
-
+                <div class="col-fluid">
+                    <h3 class="instructions">Enter 3 or more nouns, adjectives, and verbs</h3>
+                </div>
 
                 <div class="col">
 
-                    <h1>3 Nouns</h1>
+                    <h1>Nouns</h1>
                     <textarea id="nounTextArea">
 
 </textarea>
@@ -42,7 +51,7 @@
 
                 <div class="col">
 
-                    <h1>3 adjectives</h1>
+                    <h1>adjectives</h1>
                     <textarea id="adjectiveTextArea">
 
 </textarea>
@@ -51,7 +60,7 @@
 
                 <div class="col">
 
-                    <h1>3 verbs</h1>
+                    <h1>verbs</h1>
                     <textarea id="verbTextArea">
 
 </textarea>
