added an enemy, a background, and some animations

--- a/Capstone/index.html
+++ b/Capstone/index.html
@@ -36,14 +36,21 @@
     <div class="container mainContent">
 
 <div class="row">
-    <div class="col-4">
-        <div class="healthContainer">
+    <div class="col-12">
+        <div class="healthContainer" align="center">
             <p id="health">
                 0 Health
             </p>
         </div>
     </div>
 </div>
+
+<div class="row">
+        <div class="col-12" align="center">
+            <img src="images/one.gif">
+            <img id="enemy" src="images/slime.gif" width="50px;">
+        </div>
+    </div>
 
         <div class="row">
             <div class="col-12">
