--- a/Capstone/index.html
+++ b/Capstone/index.html
@@ -104,7 +104,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="wordArea" align="center">
-                    <p id="letterPlaceholder"></p>
+                    <p id="letterPlaceholder">LOADING... Please Wait a few seconds.</p>
                 </div>
             </div>
         </div>
